--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@popperjs/core": "2.11.8",
     "bootstrap": "5.3.3",
     "dayjs": "1.11.13",
+    "jhipster-app": "file:",
     "ngx-infinite-scroll": "18.0.0",
     "rxjs": "7.8.1",
     "tslib": "2.7.0",
