tentativo di deploy con helm
modified:   kubernetes-helm/jhipsterapp-helm/templates/jhipsterapp-deployment.yml
modified:   kubernetes/jhipsterapp-k8s/jhipsterapp-deployment.yml
modified:   src/main/webapp/app/entities/post/list/post.component.html

--- a/kubernetes-helm/jhipsterapp-helm/templates/jhipsterapp-deployment.yml
+++ b/kubernetes-helm/jhipsterapp-helm/templates/jhipsterapp-deployment.yml
@@ -46,7 +46,7 @@ spec:
               done
       containers:
         - name: jhipsterapp-app
-          image: lukethep/jhipsterapp
+          image: lukethep/jhipsterapp:v6.0
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: prod
