modified:   kubernetes-helm/.yo-rc.json

--- a/kubernetes-helm/.yo-rc.json
+++ b/kubernetes-helm/.yo-rc.json
@@ -13,6 +13,8 @@
     "kubernetesNamespace": "jhipster",
     "kubernetesServiceType": "LoadBalancer",
     "monitoring": "no",
+    "kubernetesStorageClassName": null,
+    "kubernetesUseDynamicStorage": false,
     "serviceDiscoveryType": "no"
   }
 }
